<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/sudoku_container1"
    tools:ignore="ExtraText">

    //топ страницы
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        //кнопка назад

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:background="@drawable/button_start"
            android:text="@string/back"
            android:textColor="@color/white"
            android:onClick="backButton"
            android:textSize="20sp" />

        //заголовок китти судоку


    </LinearLayout>

    //контейнер с таблицей
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:background="@drawable/table_borders">
        <TableLayout
            android:id="@+id/tableSudoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    //контейнер с цифрами выбираемыми пользователем
    <LinearLayout
        android:id="@+id/digits_writer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/two"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/three"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/four"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/five"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/six"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/seven"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/eight"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/nine"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/digits_selector"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>