<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/levels_container1"
    android:orientation="vertical">

    <Button
        android:id="@+id/back"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_start"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/difficulty"
        android:text="@string/easy"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/difficulty"
        android:text="@string/medium"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/difficulty"
        android:text="@string/hard"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>