<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/fixed_cell"
    android:id="@+id/congratulations">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/dark_violet" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_violet" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/difficulty"
        android:text="@string/restart"
        android:textColor="@color/white" />

</LinearLayout>